<resources>
    <string name="app_name">MyPlace</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="create_family">Create</string>
    <string name="join_family">Join</string>
    <string name="or">or</string>
    <string name="credits">521147S, Mobile and Social Computing \n San Gunes and Ilya Minyaev</string>
    <string name="family_name">Family name</string>
    <string name="your_name">Your name</string>
    <string name="key">Key</string>
    <string name="join_description">Ask family owner to share your a private key</string>
    <string name="locations">Locations</string>
    <string name="locations_list">Your locations list</string>
    <string name="family">Family</string>
    <string name="settings">Settings</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="radius">Radius (meters)</string>
    <string name="name">Name</string>
    <string name="check_members">Assign members</string>
    <string name="save">Save</string>
    <string name="location_create">Location</string>
    <string name="location_share">Location sharing</string>
    <string name="notifications">Notifications</string>
</resources>
